syntax = "proto3";

option java_package = "me.piotr.wera.customer";
option java_multiple_files = true;
package pb;

message CustomerRequest {
    string value = 1;
    int32 id = 2;
}

message CustomerResponse {
    string status = 1;
    int32 id = 2;
}

service CustomerService {
    // Unary call
    // INVALID_ARGUMENT if CustomerRequest.id < 0
    // DEADLINE_EXCEEDED after 300ms
    rpc MyServiceUnary (CustomerRequest) returns (CustomerResponse) {};

    // Server Streaming
    rpc MyServiceServerStreaming (CustomerRequest) returns (stream CustomerResponse) {};

    // Client Streaming
    rpc MyServiceClientStreaming (stream CustomerRequest) returns (CustomerResponse) {};

    // BiDi Streaming
    rpc MyServiceBiDiStreaming (stream CustomerRequest) returns (stream CustomerResponse) {};
}